tests/parser-test-files/bad-files/parse-let.3.error
error: Malformed let
  --> test:4:15
   |
 4 |  (define f (let x 5))
   |                 ^ expected binding list
